# autonomous-cloud-security-platform

./: ARCHITECTURE.md  Dockerfile  PROJECT_SUMMARY.md  README.md  pyproject.toml  render.yaml
data/: audit_log.jsonl  event_stream.jsonl  identities.json  remediation_approvals.json  remediation_exceptions.json  revoked_tokens.json  tenant_policies.json
samples/: hybrid_intrusion.json  postgres_proxy_frames.json
src/autonomous_cloud_security_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cloud_platform/: __init__.py  analytics.py  approval_store.py  audit.py  config.py  controller.py  detections.py  exception_store.py  identity_store.py  jwt_auth.py  kubernetes_adapter.py  main.py  models.py  persistence.py  policy_store.py  protocols.py  repository.py  revocation_store.py  selectors.py  service.py  tenant_policy.py
tests/: test_api.py  test_audit.py  test_controller.py  test_identity_store.py  test_kubernetes_adapter.py  test_protocols.py  test_selectors.py  test_service.py  test_tenant_policy_store.py
tmpdebug/: events.jsonl
